# streamdesk

./: Cargo.toml  Dockerfile  README.md  analytics_service.rs  dashboard.component.ts  index.html  interaction_manager.ts  stream_processor.rs  styles.css  user_management.rs
src/: main.rs
