[package]
name = "streamdesk"
version = "0.1.0"
edition = "2024"
description = "A live-streaming command center for content creators to manage broadcasts and viewer interactions."
authors = ["10zeros10"]

[dependencies]
actix-web = "4.0"
actix-cors = "0.6.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"], optional = true }

jsonwebtoken = "7.2.0"
bcrypt = "0.10.0"

dotenv = "0.15.0"

tungstenite = "0.12.0"
async-tungstenite = "0.13.0"

futures = "0.3.12"

[build-dependencies]
includedir = "0.6.0"

[[bin]]
name = "streamdesk_server"
path = "src/main.rs"

[features]
default = ["diesel"]
use_chrono = ["diesel/chrono"]
